docs/6.20.0/users/_sources/usingdakota/reference/method-multilevel_sampling-weighted.rst.txt
.. _method-multilevel_sampling-weighted:

""""""""
weighted
""""""""


Add control variate weights to the recursive differences using in multilevel Monte Carlo



.. toctree::
   :hidden:
   :maxdepth: 1

   method-multilevel_sampling-weighted-search_model_graphs


**Specification**

- *Alias:* None

- *Arguments:* None


**Child Keywords:**

+-------------------------+--------------------+-------------------------+-----------------------------------------------+
| Required/Optional       | Description of     | Dakota Keyword          | Dakota Keyword Description                    |
|                         | Group              |                         |                                               |
+=========================+====================+=========================+===============================================+
| Optional                                     | `search_model_graphs`__ | For weighted multilevel Monte Carlo, model    |
|                                              |                         | graph selection options become available      |
+----------------------------------------------+-------------------------+-----------------------------------------------+

.. __: method-multilevel_sampling-weighted-search_model_graphs.html



**Description**


Referring to :dakkw:`method-approximate_control_variate-acv_recursive_diff`,
weighted MLMC is a special case of ACV-RD where a hierarchical DAG is
employed across the model approximations.  As such, a weighted MLMC
specification forwards to the generalized ACV solver, but with fixing
the DAG to be hierarchical (each approximation node points to the next
approximation of higher fidelity, ending with the truth model at the
root node).

While the DAG is fixed, the model selections are not, so generalized
ACV capabilities for model selection are available for a specification
of weighted MLMC -- see
:dakkw:`method-multilevel_sampling-weighted-search_model_graphs-model_selection`.




**Theory**



Refer to :cite:p:`Bomarito2022` for understanding ACV generalizations
for the different control variate pairings that are possible when
codified into a more comprehensive set of potential DAGs.



