docs/6.23.0/users/_sources/usingdakota/reference/method-multilevel_sampling-weighted.rst.txt
.. _method-multilevel_sampling-weighted:

""""""""
weighted
""""""""


Include control variate weights for each of the recursive differences using in multilevel Monte Carlo (MLMC)



.. toctree::
   :hidden:
   :maxdepth: 1

   method-multilevel_sampling-weighted-search_model_graphs
   method-multilevel_sampling-weighted-sqp
   method-multilevel_sampling-weighted-nip
   method-multilevel_sampling-weighted-global_local
   method-multilevel_sampling-weighted-competed_local
   method-multilevel_sampling-weighted-solver_metric


**Specification**

- *Alias:* None

- *Arguments:* None


**Child Keywords:**

+-------------------------+--------------------+-------------------------+-----------------------------------------------+
| Required/Optional       | Description of     | Dakota Keyword          | Dakota Keyword Description                    |
|                         | Group              |                         |                                               |
+=========================+====================+=========================+===============================================+
| Optional                                     | `search_model_graphs`__ | For weighted multilevel Monte Carlo, this     |
|                                              |                         | option activates a search over possible       |
|                                              |                         | hierarchical model graphs                     |
+-------------------------+--------------------+-------------------------+-----------------------------------------------+
| Optional (Choose One)   | Optimization       | `sqp`__                 | Use a sequential quadratic programming method |
|                         | Solver             |                         | for solving an optimization sub-problem       |
|                         |                    +-------------------------+-----------------------------------------------+
|                         |                    | `nip`__                 | Use a nonlinear interior point method for     |
|                         |                    |                         | solving an optimization sub-problem           |
|                         |                    +-------------------------+-----------------------------------------------+
|                         |                    | `global_local`__        | Use a hybrid global-local scheme for solving  |
|                         |                    |                         | an optimization sub-problem                   |
|                         |                    +-------------------------+-----------------------------------------------+
|                         |                    | `competed_local`__      | Use a competed local solver scheme for        |
|                         |                    |                         | solving an optimization sub-problem           |
+-------------------------+--------------------+-------------------------+-----------------------------------------------+
| Optional                                     | `solver_metric`__       | Metric employed during numerical solutions in |
|                                              |                         | sampling-based multifidelity UQ methods.      |
+----------------------------------------------+-------------------------+-----------------------------------------------+

.. __: method-multilevel_sampling-weighted-search_model_graphs.html
__ method-multilevel_sampling-weighted-sqp.html
__ method-multilevel_sampling-weighted-nip.html
__ method-multilevel_sampling-weighted-global_local.html
__ method-multilevel_sampling-weighted-competed_local.html
__ method-multilevel_sampling-weighted-solver_metric.html



**Description**


Referring to generalized ACV (:dakkw:`method-approximate_control_variate-search_model_graphs` and :cite:p:`Bomarito2022`),
weighted MLMC is a special case of generalized ACV-RD (:dakkw:`method-approximate_control_variate-acv_recursive_diff`) where a hierarchical DAG is
employed across the model approximations.  As such, a weighted MLMC
specification forwards to the generalized ACV solver, but with fixing
the DAG to be hierarchical (each approximation node points to the next
approximation of higher fidelity/resolution, ending with the truth model
at the root node) and fixing the sampling scheme to be ACV-RD.

While the use of a hierarchical DAG is required, the approximation
selections and orderings within this DAG can be varied, so generalized
ACV capabilities for model graph search (different hierarchical
orderings) and model selection (different approximation subsets) are
available for a specification of weighted MLMC -- see
:dakkw:`method-multilevel_sampling-weighted-search_model_graphs`.




**Theory**



Refer to :cite:p:`Bomarito2022` for understanding ACV generalizations
for the different control variate pairings that are possible when
codified into a more comprehensive set of potential DAGs.



